--- a/package.json
+++ b/package.json
@@ -14,16 +14,29 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/basic-auth": "^1.1.3",
+    "@types/bcrypt": "^5.0.0",
+    "@types/config": "^3.3.0",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
+    "@types/randomstring": "^1.1.8",
     "nodemon": "^2.0.20",
     "rimraf": "^4.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "basic-auth": "^2.0.1",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "celebrate": "^15.0.1",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
+    "mongoose": "^6.8.4",
+    "randomstring": "^1.2.3",
+    "winston": "^3.8.2"
   }
 }
