--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@types/crypto-js": "^4.1.1",
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "celebrate": "^15.0.1",
+    "crypto-js": "^4.1.1",
+    "crypto-ts": "^1.0.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
